--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,10 @@ body {
     background-repeat: no-repeat;
     font-family: 'Rajdhani', sans-serif;
     font-size: 17px;
+    width: 100%;
 }
 
+/* title  */
 h1 {
     font-family: 'MedievalSharp', cursive;
     text-align: center;
@@ -24,6 +26,103 @@ hr {
     bottom: 20px;
 }
 
+/* menu and menu items  */
 .menu {
-    
+    float: left;
+    height: auto;
+    width: 20%;
+    margin-left: 2%;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.menu>h2 {
+    text-align: center;
+    font-family: 'MedievalSharp', cursive;
+}
+
+.menu>nav>ul>li {
+    list-style: none;
+    padding: 5px;
+    cursor: pointer;
+}
+
+nav ul li:hover {
+    background-color: #F19F21;
+    color: white;
+}
+
+/* main container  */
+.display-area {
+    position: relative;
+    left: 25%;
+    width: 70%;
+    background-color: white;
+    border-radius: 20px;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+}
+
+.display-area h2 {
+    font-family: 'Rajdhani', sans-serif;
+    margin-top: 5%;
+}
+
+.rating {
+    margin-left: 70%;
+    position: relative;
+    bottom: 50px;
+}
+
+#description {
+    margin-left: 30%;
+
+}
+
+/* .reviews  */
+.reviews {
+    position: relative;
+    left: 25%;
+    width: 40%;
+}
+
+.reviews h3 {
+    font-size: medium;
+}
+
+.reviews ul li {
+    list-style: none;
+    background-color: #f5ae45;
+    margin-left: 0px;
+    margin-bottom: 10px;
+    width: auto;
+    padding: 5px;
+    cursor: pointer;
+}
+
+/* form  */
+form {
+    width: 50%;
+    margin: 0 auto 50px auto;
+    margin-bottom: 30px;
+}
+
+textarea {
+    display: block;
+    width: 100%;
+    height: 100px;
+    border: 1px solid gray;
+    padding: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.btn {
+    background-color: green;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
 }
